# dango-esolang

./: .buildinfo  .gitignore  Cargo.toml  README.md  changelog.html  embedding.html  genindex.html  index.html  searchindex.js
.doctrees/: changelog.doctree  environment.pickle
.doctrees/getting_started/: data_types.doctree  index.doctree  memory.doctree
.github/workflows/: main.yml  requirements.txt  sphinx.yml
_sources/: changelog.rst.txt  index.rst.txt
_sources/getting_started/: memory.rst.txt  stdlib.rst.txt
dango-core/: Cargo.toml
dango-core/src/: lib.rs
dango-errors/: Cargo.toml
dango-errors/src/: lib.rs
dango-parser/: Cargo.toml
dango-parser/src/: lib.rs  parser.rs  span_tokenizer.rs  tokenizer.rs
dango-runtime/: Cargo.toml
dango-runtime/src/: instructions.rs  lib.rs  runtime.rs  stdlib.rs
dango-utils/: Cargo.toml
dango-utils/src/: lib.rs
docs/: conf.py  embedding.rst
docs/getting_started/: data_types.rst  index.rst  syntax.rst
doctrees/: embedding.doctree  environment.pickle  index.doctree  installation.doctree
doctrees/getting_started/: stdlib.doctree  syntax.doctree
getting_started/: data_types.html  index.html  memory.html  stdlib.html  syntax.html
html/: .buildinfo.bak  installation.html  objects.inv  search.html
html/_sources/: installation.rst.txt
src/: ascii.txt  main.rs  tests.rs
tests/: cat.dango  circle.dango  env-args.dango  f.dango  fib.dango  fork-bomb.dango  hello.dango  inf-loop.dango  truth.dango
tests/chrono/: sleep.dango
