[package]
name = "dango-esolang"
description = "A small esolang based on the Japanese delicacy of the same name"
documentation = "https://raiseafloppafan3925.github.io/dango-website/index.html"
version = "0.11.0"
edition = "2024"
license = "Apache-2.0"
license-file = "LICENSE.txt"

[dependencies]
dango_core = { path = "dango-core" }

[[bin]]
name = "dango"
path = "src/main.rs"
